force-app/main/default/objects/Contract_Email_Message__c/Contract_Email_Message__c.object-meta.xml
<CustomObject>
    <description>Contract email messages</description>
    <label>Contract Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>