force-app/main/default/objects/Contract_Email_Message__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <description>Contract parent id</description>
    <label>Parent Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Contract_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>