force-app/main/default/objects/Contract_Email_Message__c/fields/Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Text_Body__c</fullName>
    <description>Email plain text body</description>
    <label>Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>