force-app/main/default/objects/Contract_Email_Message__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>Email recipient&apos;s address</description>
    <label>To Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>